tests/neg/semantic_array_as_value.baa
// EXPECT: لا يمكن استخدام المصفوفة

صحيح الرئيسية() {
    صحيح قائمة[٢].
    صحيح س = قائمة.
    إرجع ٠.
}

